objects/Consensus__cView__c.object
<CustomObject>
    <fields>
        <fullName>Consensus__ChildRecordUpdateDate__c</fullName>
        <label>ChildRecordUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consensus__Demo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo</label>
        <referenceTo>Consensus__cDemo__c</referenceTo>
        <relationshipName>Views</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consensus__Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consensus__Files__c</fullName>
        <label>Files</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consensus__Invitation__c</fullName>
        <label>Invitation</label>
        <referenceTo>Consensus__cInvitation__c</referenceTo>
        <relationshipLabel>cViews</relationshipLabel>
        <relationshipName>Views</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Consensus__Replay__c</fullName>
        <label>Replay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consensus__Uuid__c</fullName>
        <externalId>true</externalId>
        <label>Uuid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__ViewId__c</fullName>
        <label>ViewId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__dateView__c</fullName>
        <label>dateView</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consensus__linkUuid__c</fullName>
        <label>linkUuid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consensus__selectedDemoUuid__c</fullName>
        <label>selectedDemoUuid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>cView</label>
    <listViews>
        <fullName>Consensus__All</fullName>
        <columns>NAME</columns>
        <columns>Consensus__Demo__c</columns>
        <columns>Consensus__Duration__c</columns>
        <columns>Consensus__Files__c</columns>
        <columns>Consensus__Invitation__c</columns>
        <columns>Consensus__linkUuid__c</columns>
        <columns>Consensus__Replay__c</columns>
        <columns>Consensus__Uuid__c</columns>
        <columns>Consensus__ViewId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>cViews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>